React-WordPress/scss/elements/_widget.scss
/* ... */
.widget--vendor {
    padding-bottom: 40px;
    margin-bottom: 40px;
    border-bottom: 1px solid #d8d8d8;
    @extend %list-reset;

    .widget-title {
        margin-bottom: 35px;
        font-size: 20px;
        color: $color-heading;
        font-weight: 600;
    }

    .form-control {
        background-color: #fff;
        border: none;
    }

    .select2 {
        min-width: 100%;

        .select2-selection {
            border: none;
        }

        .select2-selection__rendered {
            font-size: 16px;
            color: $color-text;
            padding-top: 15px;
            padding-bottom: 15px;
        }
    }

    .ps-list--arrow {
        a {
            color: $color-heading;

            &:before {
                content: "\f105";
                font-size: 20px;
            }
        }
    }
}

.widget--open-time {
    ul {
        li {
            margin-bottom: 25px;

            strong {
                display: block;
                font-weight: 600;
                color: $color-heading;
            }

            span {
                color: $color-text;
            }

            &:last-child {
                margin-bottom: 0;
            }
        }
    }
}

.ps-widget--account-dashboard {
    .ps-widget__header {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        align-items: flex-start;
        padding-bottom: 20px;

        img {
            flex-basis: 60px;
            max-width: 60px;
            border-radius: 50%;
        }

        figure {
            flex-basis: 100%;
            padding-left: 10px;

            figcaption {
                font-size: 16px;
                color: $color-text;
            }

            p {
                margin-bottom: 0;
                font-size: 16px;
                font-weight: 600;
                color: $color-heading;
            }
        }
    }

    .ps-widget__content {
        @extend %list-reset;

        ul {
            border: 1px solid #d1d1d1;

            li {
                border-bottom: 1px solid #d1d1d1;
                a {
                    display: block;
                    padding: 15px 20px;
                    line-height: 20px;
                    font-size: 16px;
                    font-weight: 500;
                    color: $color-heading;
                    text-transform: capitalize;
                    i {
                        margin-right: 10px;
                    }
                    &:hover {
                        background-color: $color-1st;
                        color: #fff;
                    }
                }

                &:last-child {
                    border-bottom: none;
                }

                &.active {
                    background-color: $color-1st;
                    a {
                        color: #fff;
                    }
                }
            }
        }
    }
}

